--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@open-agent-platform/web",
+  "name": "@gorbit/web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "turbo build:internal --filter=@open-agent-platform/web",
+    "build": "turbo build:internal --filter=@gorbit/web",
     "build:internal": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -83,7 +83,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "next": "^15.4.8",
+    "next": "^15.3.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
