--- a/apps/web/Dockerfile.dev
+++ b/apps/web/Dockerfile.dev
@@ -19,4 +19,4 @@ RUN yarn install --immutable-cache || yarn install
 EXPOSE 3000
 
 # Default command runs the Next dev server binding to 0.0.0.0
-CMD ["yarn", "dev", "--hostname", "0.0.0.0", "--port", "3000"]
+CMD ["yarn", "dev", "--", "--hostname", "0.0.0.0", "--port", "3000"]
