--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gorbit",
   "author": "LangChain",
   "private": true,
+  "packageManager": "yarn@1.22.22",
   "workspaces": [
     "apps/*"
   ],
