--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,8 +64,10 @@
     "tailwindcss-animate": "^1.0.7",
     "use-stick-to-bottom": "^1.1.0",
     "uuid": "^11.1.0",
-    "zod": "3.23.8",
-    "zustand": "^5.0.3"
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.6",
+    "zustand": "^5.0.3",
+    "react-hook-form": "^7.56.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
